k8s/services/your-spotify/app/web/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: your-spotify-web
spec:
  # No support for IPv6 upstream
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
