k8s/services/your-spotify/app/web/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-spotify-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: ys.lama-corp.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: your-spotify-web
                port:
                  name: http
  tls:
    - hosts:
        - ys.lama-corp.space
      secretName: your-spotify-web-tls
